--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container mt-5">
-  <h1 class="mb-4">RSS агрегатор</h1>
+  <h1 class="mb-4" data-i18n="appTitle">RSS агрегатор</h1>
   
   <form data-rss-form class="mb-4">
     <div class="row">
@@ -16,7 +16,6 @@
         <input 
           type="text" 
           data-rss-input 
-          name="url"
           class="form-control" 
           placeholder="Введите RSS-ссылку"
           required
