--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+  <style>
+    body {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    .container {
+      flex: 1;
+    }
+    .feeds-posts-container {
+      max-height: 60vh;
+      overflow-y: auto;
+    }
+    .card-body {
+      overflow-y: auto;
+      max-height: 50vh;
+    }
+  </style>
 </head>
 <body class="container mt-5">
   <div class="row">
@@ -21,7 +39,7 @@
               type="text" 
               data-rss-input 
               class="form-control" 
-              placeholder="Введите RSS-ссылку"
+              placeholder="Ссылка RSS"
               required
               autofocus
             >
@@ -39,15 +57,27 @@
         </div>
       </form>
 
-      <div class="row g-4">
+      <div class="row g-4 feeds-posts-container">
         <div class="col-md-6">
-          <div data-rss-feeds>
-            <!-- Фиды будут здесь -->
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Фиды</h5>
+              <div data-rss-feeds>
+                <!-- Фиды будут здесь -->
+                <p class="text-muted">Пока нет RSS</p>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div data-rss-posts>
-            <!-- Посты будут здесь -->
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Посты</h5>
+              <div data-rss-posts>
+                <!-- Посты будут здесь -->
+                <p class="text-muted">Пока нет постов</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
