--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               data-rss-input 
               class="form-control" 
               placeholder="Ссылка RSS"
+              aria-label="url"
               required
               autofocus
             >
